testsuite/escript/func/funcref05.err
funcref05.src:1:1: error: In function call: Cannot use named arguments here.