testsuite/escript/func/funcref05.src
( sum )( b := 2 );

function sum( a, b )
  return a + b;
endfunction
